# wcp

./: .clang-format  README.md  meson.build  wcp-debian.sh  wcp-template.sh  wcp-void.sh  wcp.sh
res/: main.css
res/html/: main.css  main.html
res/script/: bluetooth.sh  reboot.sh  shutdown.sh  suspend.sh
src/kinetic_ui/: ku_connector_wayland.c  ku_draw.c  ku_event.c  ku_gen_css.c  ku_gen_textstyle.c  ku_gen_type.c  ku_view.c
src/kinetic_ui/texture/: tg_css.c
src/mt_core_ext/: mt_string_ext.c
src/wcp/: config.c  draw.c  kvlist.c  ocp.c  ui.c  wcp.c  wl_connector.c  wm_event.c
src/wcp/ui/: ui.c
src/wcp/utils/: cstr_util.c  map_util.c  str_util.c
src/zen_core/: zc_bm_rgba.c  zc_callback.c  zc_cstring.c  zc_number.c  zc_time.c
src/zen_gfx/: zc_draw.c  zc_text.c
src/zen_math/: zc_mat3.c  zc_mat4.c  zc_util2.c  zc_util3.c  zc_vec2.c  zc_vec3.c  zc_vec4.c
src/zen_ui/: ui_compositor.c  ui_generator.c  ui_manager.c  ui_table.c  ui_texmap.c  ui_util.c
src/zen_ui/html/: css.c  html.c
src/zen_ui/view/: tg_css.c  tg_knob.c  tg_picker.c  tg_scaledimg.c  tg_text.c  vh_anim.c  vh_button.c  vh_cv_body.c  vh_cv_evnt.c  vh_cv_scrl.c  vh_drag.c  vh_key.c  vh_knob.c  vh_picker.c  vh_roll.c  vh_slider.c  vh_tbl_body.c  vh_tbl_evnt.c  vh_tbl_head.c  vh_tbl_scrl.c  vh_textinput.c  vh_touch.c  view.c  view_layout.c  viewgen_css.c  viewgen_html.c  viewgen_type.c  views.c
tst/: runtests.sh
tst/configa/html/: main.css
tst/configa/script/: bluetooth-label.sh  brightness.sh  logout.sh  wifi-label.sh
